--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -21,14 +21,17 @@
 }
 
 .paperLogin{
-  width: 300;
+  width: 300px;
+  padding: 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 30px;
-  border: 1px solid #e1e1e1;
-  border-radius: 5px;
-  margin-bottom:200px;
+  border: 2px solid #dc143c
+}
+
+.paperLogin Button {
+  width: 70%; 
+  margin-top: 30px;
 }
 
 .formLogin{
