--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,7 +4,6 @@
   text-align: center;
   background: linear-gradient(to right, #ffa500, #ff5733);
   padding: 10px;
-  /* width: 100%; */
 }
 
 .tabs {
@@ -26,7 +25,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  border: 2px solid #dc143c
+  border: 2px solid #dc143c;
+  box-shadow: 0 1px 3px rgba(220, 20, 60, 0.2);
+  display: "flex";
+
 }
 
 .paperLogin Button {
