--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,6 +4,7 @@
   text-align: center;
   background: linear-gradient(to right, #ffa500, #ff5733);
   padding: 10px;
+  font-size: 1.3rem;
 }
 
 .tabs {
